--- a/config/cloud/auth-service.yml
+++ b/config/cloud/auth-service.yml
@@ -4,6 +4,11 @@ spring:
       resourceserver:
         jwt:
           issuer-uri: http://host.docker.internal:18080/realms/task-manager
+keycloak:
+  server-url: http://host.docker.internal:18080
+  realm: task-manager
+  client-id: ${KEYCLOAK_CLIENT_ID}
+  client-secret: ${KEYCLOAK_CLIENT_SECRET}
 logging:
   level:
     org.springframework.security: TRACE
