--- a/config/cloud/api-gateway.yml
+++ b/config/cloud/api-gateway.yml
@@ -1,7 +1,16 @@
+server:
+  port: 8080
+  forward-headers-strategy: framework
 spring:
+  main:
+    web-application-type: reactive
   cloud:
     gateway:
       routes:
+        - id: eureka-service-route
+          uri: http://host.docker.internal:8761
+          predicates:
+            - Host=/eureka/web
         - id: user-service-route
           uri: lb://user-service
           predicates:
@@ -14,10 +23,23 @@ spring:
           uri: lb://productivity-service
           predicates:
             - Host=/api/v1/productivity/**
+auth-service:
+  uri: http://host.docker.internal:8084
+logging:
+  level:
+    root: INFO
+    org.springframework.cloud.gateway.route.RouteDefinitionRouteLocator: INFO
+    org.springframework.cloud.gateway: TRACE
+    org.springframework.security: DEBUG
 eureka:
+  instance:
+    leaseRenewalIntervalInSeconds: 1
+    leaseExpirationDurationInSeconds: 1
+    prefer-ip-address: true
   client:
     service-url:
-      defaultZone: http://host.docker.internal:8761/eureka
+      defaultZone: http://host.docker.internal:8761/eureka/
+    registryFetchIntervalSeconds: 1
 management:
   zipkin:
     tracing:
