--- a/.github/workflows/eureka-server.yml
+++ b/.github/workflows/eureka-server.yml
@@ -1,41 +1,34 @@
-name: 'Discovery Service CI'
+name: 'Eureka Server CI'
 
 on:
   push:
-    branches:
-      - master
-    paths:
-      - 'eureka-server/**'
+    branches: [ 'master' ]
+    paths: [ 'eureka-server/**' ]
+env:
+  SERVICE: eureka-server
 jobs:
-  eureka-server:
-    env:
-      DOCKER_USERNAME: ${{secrets.DOCKER_USERNAME}}
-      DOCKER_PASSWORD: ${{secrets.DOCKER_ACCESS_TOKEN}}
-      PATH: eureka-server
-    runs-on: ubuntu-latest
+  test:
+    runs-on: ubuntu-22.04
     steps:
-      - name: checkout repository
+      - name: checkout code
         uses: actions/checkout@v3
+      - name: tests
+        run: mvn -B verify -f ${{env.SERVICE}}
 
-      - name: set up jdk 21
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'adopt'
-          java-version: '21'
-
+  build-and-push:
+    runs-on: ubuntu-22.04
+    steps:
+      - name: checkout code
+        uses: actions/checkout@v3
       - name: login to docker hub
         uses: docker/login-action@v1
         with:
-          username: ${{env.DOCKER_USERNAME}}
-          password: ${{env.DOCKER_PASSWORD}}
-
-      - name: package the application
-        run: mvn clean install --file ${{PATH}}/pom.xml
-
+          username: ${{secrets.DOCKER_USERNAME}}
+          password: ${{secrets.DOCKER_PASSWORD}}
       - name: build and push docker image
         uses: docker/build-push-action@v2
         with:
           context: ./PATH
           dockerfile: Dockerfile
           push: true
-          tags: ${{secrets.DOCKER_USERNAME}}/${{PATH}}:latest
+          tags: ${{secrets.DOCKER_USERNAME}}/${{env.SERVICE}}:latest
