--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,11 +50,11 @@ services:
       MONGO_INITDB_ROOT_USERNAME: ${PRODUCTIVITY_SERVICE_USER}
       MONGO_INITDB_ROOT_PASSWORD: ${PRODUCTIVITY_SERVICE_PASSWORD}
     healthcheck:
-      test: mongosh --eval db.adminCommand('ping')
+      test: mongosh --eval db.adminCommand 'ping'
     ports:
       - '27017:27017'
     volumes:
-      - db-productivity-service-data:/var/lib/postgresql/data
+      - db-productivity-service-data:/data/db
     env_file:
       - ./.env
 
@@ -98,9 +98,7 @@ services:
     ports:
       - '18080:8080'
     volumes:
-      - keycloak-import-config:/opt/keycloak/import
-    #      - keycloak-providers-config:/opt/keycloak/conf
-    #      - ./auth-service/target/auth-service-0.0.1-SNAPSHOT.jar:/opt/keycloak/providers/keycloak-event-listener.jar
+      - keycloak-config:/opt/keycloak/import
     env_file:
       - ./.env
 
@@ -161,7 +159,7 @@ volumes:
   db-task-service-data:
   db-productivity-service-data:
   grafana-data:
-  keycloak-import-config:
+  keycloak-config:
     driver: local
     driver_opts:
       o: bind
