--- a/config/cloud/api-gateway.yml
+++ b/config/cloud/api-gateway.yml
@@ -2,6 +2,24 @@ server:
   port: 8080
   forward-headers-strategy: framework
 spring:
+  cors:
+    url:
+      configurations:
+        "[/**]":
+          allowed-origins:
+            - http://localhost:8081
+          allowed-methods:
+            - GET
+            - POST
+            - PUT
+            - DELETE
+          allowed-headers:
+            - Authorization
+            - Content-Type
+          allow-credentials: true
+          exposed-headers:
+            - X-CUSTOM-HEADER
+          max-age: 10
   main:
     web-application-type: reactive
   cloud:
