--- a/.github/workflows/task-service.yml
+++ b/.github/workflows/task-service.yml
@@ -28,7 +28,6 @@ jobs:
       - name: build and push docker image
         uses: docker/build-push-action@v2
         with:
-          context: ./PATH
-          dockerfile: Dockerfile
+          context: ./${{env.SERVICE}}
           push: true
           tags: ${{secrets.DOCKER_USERNAME}}/${{env.SERVICE}}:latest
