--- a/eureka-server/pom.xml
+++ b/eureka-server/pom.xml
@@ -6,11 +6,11 @@
     <parent>
         <groupId>com.ilyap</groupId>
         <artifactId>task-manager</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
 
     <artifactId>eureka-server</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0</version>
 
     <dependencies>
         <dependency>
