--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
     </parent>
 
     <modules>
+        <module>logging-starter</module>
+        <module>validation-starter</module>
         <module>api-gateway</module>
         <module>config-server</module>
         <module>eureka-server</module>
@@ -155,6 +157,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>3.2.5</version>
+                <configuration>
+                    <argLine>-XX:+EnableDynamicAgentLoading</argLine>
+                </configuration>
                 <executions>
                     <execution>
                         <goals>
