--- a/pom.xml
+++ b/pom.xml
@@ -179,5 +179,10 @@
             </plugin>
         </plugins>
     </build>
-
+    <repositories>
+        <repository>
+            <id>github</id>
+            <url>https://maven.pkg.github.com/IlyaPukhov/task-manager</url>
+        </repository>
+    </repositories>
 </project>
