--- a/validation-starter/pom.xml
+++ b/validation-starter/pom.xml
@@ -10,6 +10,13 @@
         <relativePath />
     </parent>
 
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <url>https://maven.pkg.github.com/IlyaPukhov/task-manager</url>
+        </repository>
+    </distributionManagement>
+
     <groupId>com.ilyap</groupId>
     <artifactId>validation-starter</artifactId>
     <version>1.0.0</version>
