--- a/.github/workflows/push-user-service.yml
+++ b/.github/workflows/push-user-service.yml
@@ -7,6 +7,7 @@ on:
   workflow_dispatch:
 env:
   SERVICE: user-service
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 jobs:
   test-and-build:
     runs-on: ubuntu-22.04
@@ -30,7 +31,7 @@ jobs:
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          password: ${{ secrets.DOCKER_TOKEN }}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
