--- a/.github/workflows/publish-parent-pom.yml
+++ b/.github/workflows/publish-parent-pom.yml
@@ -24,4 +24,4 @@ jobs:
         run: cp .github/maven-settings.xml $HOME/.m2/settings.xml
 
       - name: Publish POM
-        run: mvn deploy -f pom.xml --settings .github/maven-settings.xml
+        run: mvn deploy -f pom.xml --settings .github/maven-settings.xml -Dskip
