--- a/.github/workflows/push-mail-service.yml
+++ b/.github/workflows/push-mail-service.yml
@@ -42,5 +42,5 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/${{ env.SERVICE }}:latest
           secret-envs: |
-            GITHUB_ACTOR=${{ secrets.GITHUB_ACTOR }}
+            GITHUB_ACTOR=${{ github.actor }}
             GITHUB_TOKEN=${{ env.GITHUB_TOKEN }}
