--- a/.github/workflows/push-user-service.yml
+++ b/.github/workflows/push-user-service.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Set up Maven settings
         run: |
           cp .github/maven-settings.xml $HOME/.m2/settings.xml
-          cp .github/maven-settings.xml ${{ env.SERVICE }}/
+          cp .github/maven-settings.xml ${{ env.SERVICE }}/settings.xml
 
       - name: Run tests
         run: mvn -B verify -f ${{ env.SERVICE }}/pom.xml
